--- a/Makefile.epel
+++ b/Makefile.epel
@@ -6,9 +6,13 @@
 LANG=C
 
 #
-#MOCKS+=epel-7-x86_64
+MOCKS+=epel-7-x86_64
 MOCKS+=epel-8-x86_64
 #MOCKS+=fedora-31-x86_64
+
+MOCKCFGS+=awxrepo-7-x86_64
+MOCKCFGS+=awxrepo-8-x86_64
+#MOCKCFGS+=awxrepo-f31-x86_64
 
 #REPOBASEDIR=/var/www/linux/mockrepo
 REPOBASEDIR:=`/bin/pwd`/../awxrepo
@@ -17,21 +21,25 @@ SPEC := `ls *.spec | head -1`
 
 all:: $(MOCKS)
 
-getsrc:: FORCE
+.PHONY: getsrc
+getsrc:: 
 	spectool -g $(SPEC)
 
-srpm:: FORCE
+.PHONY: srpm
+srpm::
 	@echo "Building SRPM with $(SPEC)"
 	rm -rf rpmbuild
 	rpmbuild --define '_topdir $(PWD)/rpmbuild' \
 		--define '_sourcedir $(PWD)' \
 		-bs $(SPEC) --nodeps
 
-build:: srpm FORCE
+.PHONY: build
+build:: srpm
 	rpmbuild --define '_topdir $(PWD)/rpmbuild' \
 		--rebuild rpmbuild/SRPMS/*.src.rpm
 
-$(MOCKS):: srpm FORCE
+.PHONY: $(MOCKS)
+$(MOCKS):: srpm
 	@if [ -e $@ -a -n "`find $@ -name \*.rpm`" ]; then \
 		echo "	Skipping RPM populated $@"; \
 	else \
@@ -69,6 +77,9 @@ install:: $(MOCKS)
 	    rsync -av $$repo/*.rpm --exclude=*.src.rpm --exclude=*debuginfo*.rpm --no-owner --no-group $$repo/*.rpm $$rpmdir/. || exit 1; \
 	    createrepo -q --update $$rpmdir/.; \
 	done
+	@for name in $(MOCKCFGS); do \
+	    touch ../$$name.cfg; \
+	done
 
 clean::
 	rm -rf */
@@ -77,5 +88,3 @@ clean::
 
 realclean distclean:: clean
 	rm -f *.rpm
-
-FORCE:
