--- a/awxrepo.repo.in
+++ b/awxrepo.repo.in
@@ -1,12 +1,12 @@
 [awxrepo]
-name=Samba repo - $basearch
+name=AWX repo - $basearch
 baseurl=file://@REPOBASEDIR@/awxrepo/@RELEASEDIR@/$releasever/$basearch
 enabled=0
 gpgcheck=0
 metadata_expire=1
 
 [awxrepo-source]
-name=Samba repo - Source
+name=AWX repo - Source
 baseurl=file://@REPOBASEDIR@/awxrepo/@RELEASEDIR@/$releasever/SRPMS/
 enabled=0
 gpgcheck=0
