Add and update  Makefiles to discard f30

--- a/Makefile.awx8
+++ b/Makefile.awx8
@@ -7,7 +7,7 @@ LANG=C
 
 #MOCKS+=awxrepo-f31-x86_64
 MOCKS+=awxrepo-8-x86_64
-MOCKS+=awxrepo-7-x86_64
+#MOCKS+=awxrepo-7-x86_64
 
 MOCKCFGS+=$(MOCKS)
 
