--- a/Makefile.awx7
+++ b/Makefile.awx7
@@ -7,7 +7,7 @@ LANG=C
 
 #MOCKS+=awxrepo-f31-x86_64
 #MOCKS+=awxrepo-8-x86_64
-#MOCKS+=awxrepo-7-x86_64
+MOCKS+=awxrepo-7-x86_64
 
 #REPOBASEDIR=/var/www/linux/awxrepo
 REPOBASEDIR:=`/bin/pwd`/../awxrepo
